--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -28,7 +28,7 @@ zh-CN:
     used:
       title: "已使用的优惠券"
     subbar:
-      all_button: "全部"
+      index_button: "全部"
       unuse_button: "未使用"
       used_button: "已使用"
     couponlist:
@@ -125,4 +125,29 @@ zh-CN:
     subbar:
       show_button: "查看个人信息"
       edit_button: "修改个人信息"
+
+  admin:
+    categories:
+      new:
+        title: "新增分类"
+      edit:
+        title: "编辑分类"
+      index:
+        title: "全部分类"
+        head_id: "编号"
+        head_cn_name: "中文分类"
+        head_en_name: "英文分类"
+        head_parent_id: "父类编号"
+        head_operation: "操作"
+        edit_button: "编辑"
+        delete_button: "删除"
+        delete_confirm: "删除后不可恢复，确定删除？"
+      subbar:
+        index_button: "全部分类"
+        new_button: "新增分类"
+      form:
+        cn_name: "中文分类："
+        en_name: "英文分类："
+        parent_id: "父类编号："
+        submit_button: "提交"
 
