--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -202,6 +202,54 @@ zh-CN:
         password_confirm: "确认密码："
         submit_button: "提交"
 
+    products:
+      new:
+        title: "新增商品"
+      edit:
+        title: "编辑商品"
+      index:
+        title: "全部商品"
+        head_id: "编号"
+        head_title: "名称"
+        head_status: "状态"
+        head_discount: "折扣"
+        head_category: "分类"
+        head_district: "区域"
+        head_begin_at: "开始"
+        head_end_at: "结束"
+        head_address: "地址"
+        head_phone: "电话"
+        head_sale_count: "卖出"
+        head_operation: "操作"
+        status_on_shelf: "已上架"
+        status_off_shelf: "未上架"
+        show_button: "显示"
+        edit_button: "编辑"
+        delete_button: "删除"
+        delete_confirm: "删除后不可恢复，确定删除？"
+      subbar:
+        index_button: "全部商品"
+        new_button: "新增商品"
+      form:
+        title: "名称："
+        status: "状态："
+        discount: "折扣："
+        category: "分类："
+        district: "区域："
+        begin_at: "开始时间："
+        end_at: "结束时间："
+        address: "地址："
+        phone: "电话："
+        sale_count: "销售数量："
+        pos_x: "坐标X："
+        pos_y: "坐标Y："
+        image: "上传图片："
+        detail: "详细内容："
+        status_on_shelf: "已上架"
+        status_off_shelf: "未上架"
+        submit_button: "提交"
+        preview_button: "预览"
+
     shared:
       dashboard:
         products: "商品管理"
