--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -76,6 +76,7 @@ zh-CN:
       impression: "用户印象："
       noimpression: "暂无"
       detail: "详细信息"
+      send_button: "发送到手机"
     hot_products:
       hot: "热门优惠券"
       discount: "打折时间："
