--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -18,6 +18,7 @@ zh-CN:
       products_title: "热门优惠券"
     map:
       map_title: "优惠地图"
+      map_tips: "点击这里可以<b>折叠</b>优惠地图"
     about:
       title: "关于我们"
       source: "名字由来"
