--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -128,6 +128,7 @@ zh-CN:
       email_info: "&nbsp;&nbsp;(*必填，推荐QQ邮箱)"
     error_messages:
       messages_head: "您的注册信息不满足以下要求："
+      close: "关闭"
     show:
       title: "个人信息"
       user_number: "第 %{id} 位会员"
