--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -81,7 +81,7 @@ zh-CN:
       phone: "电&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;话："
       impression: "用户印象："
       noimpression: "暂无"
-      detail: "详细信息"
+      detail: "本单详情"
       send_button: "发送到手机"
     hot_products:
       hot: "热门优惠券"
