--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -32,7 +32,7 @@ zh-CN:
   companies:
     check_coupon:
       title: "验证优惠券"
-      code_label: "请输入优惠券密码"
+      code_label: "优惠券密码"
       check_button: "验证"
 
   coupons:
@@ -104,6 +104,10 @@ zh-CN:
     dashboard:
       my_coupons: "我的优惠券"
       my_account: "账户设置"
+    dealer_dashboard:
+      dealer_coupons: "验证优惠券"
+      dealer_account: "账户设置"
+      sign_out: "退出"
 
   users:
     registrations:
@@ -147,6 +151,40 @@ zh-CN:
     error_messages:
       messages_head: "您的注册信息不满足以下要求："
       close: "关闭"
+
+  dealers:
+    registrations:
+      new:
+        title: "商家注册"
+        name: "用户名"
+        password: "创建密码"
+        password_confirm: "确认密码"
+        email: "邮箱"
+        mobile: "手机"
+        captcha: "验证码"
+        signup_button: "注册"
+        name_info: "&nbsp;&nbsp;(*必填，4-16个字符)"
+        pass_info: "&nbsp;&nbsp;(*必填，6-32个字符)"
+        passconfirm_info: "&nbsp;&nbsp;(*必填，请再次输入密码)"
+        email_info: "&nbsp;&nbsp;(*必填，推荐QQ邮箱)"
+      edit:
+        title: "账户设置"
+        name: "用户名"
+        email: "邮箱"
+        mobile: "手机"
+        password: "新密码"
+        password_confirm: "确认新密码"
+        current_password: "当前密码"
+        password_info: "&nbsp;&nbsp;(如果不想修改密码请保持空白)"
+        current_password_info: "&nbsp;&nbsp;(请输入当前密码确认上述修改)"
+        update_button: "更新信息"
+        back_button: "返回上页"
+    sessions:
+      new:
+        login: "商家登录"
+        name: "账号"
+        password: "密码"
+        login_button: "登录"
 
   profiles:
     show:
