--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -260,7 +260,6 @@ zh-CN:
         head_name: "用户名"
         head_email: "邮箱"
         head_mobile: "手机"
-        head_admin: "管理权限"
         head_operation: "操作"
         edit_button: "编辑"
         delete_button: "删除"
@@ -268,6 +267,32 @@ zh-CN:
       subbar:
         index_button: "全部用户"
         new_button: "新增用户"
+      form:
+        name: "用户名："
+        email: "邮箱："
+        mobile: "手机："
+        password: "密码："
+        password_confirm: "确认密码："
+        submit_button: "提交"
+
+    dealers:
+      new:
+        title: "新增商家"
+      edit:
+        title: "编辑商家"
+      index:
+        title: "全部商家"
+        head_id: "编号"
+        head_name: "用户名"
+        head_email: "邮箱"
+        head_mobile: "手机"
+        head_operation: "操作"
+        edit_button: "编辑"
+        delete_button: "删除"
+        delete_confirm: "删除后不可恢复，确定删除？"
+      subbar:
+        index_button: "全部商家"
+        new_button: "新增商家"
       form:
         name: "用户名："
         email: "邮箱："
@@ -331,9 +356,9 @@ zh-CN:
     shared:
       dashboard:
         products: "商品管理"
-        shops: "商家管理"
         coupons: "优惠券管理"
         users: "用户管理"
+        dealers: "商家管理"
         categories: "分类管理"
         districts: "区域管理"
         sign_out: "退出"
