modify discont info feature

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -334,9 +334,11 @@ zh-CN:
         title: "名称："
         status: "状态："
         discount_type: "优惠类型："
-        discount: "折扣："
-        price: "原价"
-        specific: "特殊"
+        discount_part1: "优惠信息："
+        discount_part2: "优惠信息："
+        discount_part3: "优惠信息："
+        discount_part4: "优惠信息："
+        discount_part5: "优惠信息："
         category: "分类："
         district: "区域："
         begin_at: "开始时间："
