modify title keyword description for SEO

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -16,7 +16,7 @@ zh-CN:
 
   home:
     index:
-      title: "吉林打折优惠信息 - 最快最全的打折优惠信息聚合平台"
+      title: "吉林市打折优惠信息 - 最快最全的打折优惠信息聚合平台"
       products_title: "热门优惠券"
     map:
       map_title: "优惠地图"
