modify carousel style for online

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -76,7 +76,7 @@ zh-CN:
 
   products:
     index:
-      title: "商家打折优惠信息"
+      title: "吉林市打折优惠信息 - 最快最全的打折优惠信息聚合平台"
       products_title: "热门优惠券"
       time: "结束时间："
       detail_button: "去看看"
