finish home/index view

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -18,6 +18,7 @@ zh-CN:
     index:
       title: "吉林市打折优惠信息 - 最快最全的打折优惠信息聚合平台"
       products_title: "热门优惠券"
+      articles_title: "衣妆达人"
     map:
       title: "附近打折优惠信息"
       map_title: "我附近的优惠"
